# AgenticXlangBench

./: .gitignore  LICENSE  OVERVIEW.md  README.md
.claude/skills/: README.md  anti-hack.md  calibrate-task.md  generate-task.md  select-tasks.md
task1-pytorch-cuda-index/: README.md
task10-redis-module-overwrite/: README.md
task14-numpy-dtype-overflow/: README.md
task15-sqlite-optimizer/: README.md
task2-pytorch-autograd-sign/: README.md
task3-numpy-blas-register/: README.md
task3-numpy-blas-register/task/: instruction.md
task4-jax-vmap-batch/: README.md  run.sh
task5-cpython-refcount/: README.md
task6-tensorflow-shape/: README.md
task8-rust-ffi-lifetime/: README.md
tasks/task1-pytorch-cuda-index/: README.md  calibrate.sh  run.sh
tasks/task10-redis-module-overwrite/: README.md  run.sh
tasks/task11-llvm-codegen/: README.md  run.sh
tasks/task12-python-gil-race/: README.md  run.sh
tasks/task13-opencv-cuda-resize/: README.md  run.sh
tasks/task14-numpy-dtype-overflow/: README.md  run.sh
tasks/task15-sqlite-optimizer/: README.md  run.sh
tasks/task2-pytorch-autograd-sign/: README.md  run.sh
tasks/task3-numpy-blas-register/: README.md  run.sh
tasks/task4-jax-vmap-batch/: README.md  run.sh
tasks/task5-cpython-refcount/: README.md  run.sh
tasks/task6-tensorflow-shape/: README.md  calibrate.sh  run.sh
tasks/task7-cudnn-conv-backward/: README.md  run.sh
tasks/task8-rust-ffi-lifetime/task/workspace/: Cargo.toml  pyproject.toml  test_stress.py
tasks/task8-rust-ffi-lifetime/task/workspace/src/: ffi.rs  lib.rs
(+214 files in other folders)
